<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="#c00"
            android:text="@string/title_Cali"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/label_paraSmallRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:text="@string/label_paraSmallRes"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/button_paraSmallResCali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:textSize="16sp"
            android:text="@string/button_Cali" />
        <EditText
            android:id="@+id/SmallResVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/label_paraSmallRes"
            android:layout_toStartOf="@id/button_paraSmallResCali"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:hint="@string/hint_paraSmallRes"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/label_paraLargeRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:text="@string/label_paraLargeRes"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/button_paraLargeResCali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:textSize="16sp"
            android:text="@string/button_Cali" />
        <EditText
            android:id="@+id/LargeResVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/label_paraLargeRes"
            android:layout_toStartOf="@id/button_paraLargeResCali"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:hint="@string/hint_paraLargeRes"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/label_paraTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:text="@string/label_paraTemp"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/button_paraTempCali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:textSize="16sp"
            android:text="@string/button_Cali" />
        <EditText
            android:id="@+id/TempVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/label_paraTemp"
            android:layout_toStartOf="@id/button_paraTempCali"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:hint="@string/hint_paraTemp"/>
    </RelativeLayout>
</LinearLayout>